# scoresheet-models

./: .gitignore  Justfile  README.md  build.ts  deno.json  dev.ipynb  images  js.ipynb  package.json  requirements.txt  tsconfig.json
creator/: Justfile  README.md  index.html  package.json  tsconfig.compile.json  tsconfig.json
creator/src/: Creator.tsx  NumberField.tsx  Standalone.tsx  cols.tsx  controller.ts  index.ts  json.tsx  main.tsx
creator/src/pkg/: App.tsx
demo/: Justfile  index.html  package.json  tsconfig.json  vite.config.ts
demo/src/: App.tsx  ModelDisplay.tsx  Selector.tsx
dev/: dev.ipynb
js/: Justfile  package.json  tsconfig.json
js/src/: defs.ts  fetch.ts  grid.ts  images.ts  index.ts  models.ts
js/src/util/: arrays.ts  index.ts
models/: uscf.ipynb
py/: Justfile  README.md  pyproject.toml
py/src/scoresheet_models/: __init__.py  __init__.pyi  _contours.py  defs.py  drawing.py  extract.py  fetch.py  model.py  models.py
py/src/scoresheet_models/_models/: __init__.py  _models.py  andorra.py
py/src/scoresheet_models/defs/: defs.py  model.py
py/src/scoresheet_models/models/: __init__.py  models.py
scripts/: new-model.bic.ipynb  new-model.ipynb  new-model.v2.ipynb  new-model.v2.manaus.ipynb  new-model2.ipynb
src/: defs.ts  dev.ipynb  grid.ts  index.ts  models.ts
src/images/llobregat23/: index.js
src/util/: index.ts
test-pkg/: package.json
testapp/: index.html  package.json  vite.config.ts
testapp/src/: App.tsx
