[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scoresheet-models"
version = "0.1.3"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Tools for storing, rendering and parsing chess scoresheet models"
dependencies = [
  "Pydantic"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/moveread/scoresheet-models"

# [project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]